redireccionado de links

--- a/page.html
+++ b/page.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CARS INFO</title>
-    <link rel="stylesheet" href="/css/StylesPage.css" />
+    <link rel="stylesheet" href="css/StylesPage.css" />
   </head>
 
   <body>
     <div class="tittle">
       <h1>RESUMEN DE LA PELÍCULA</h1>
-      <div class="logo"><img src="../img/logo.png" /></div>
+      <div class="logo"><img src="img/logo.png" /></div>
     </div>
     <div class="txt">
       <p>
@@ -36,29 +36,29 @@
         película con malos comportamientos, se convierte en un coche lleno de
         valores.
       </p>
-      <center><img src="../img/rayo.jpg" width="600" /></center>
+      <center><img src="img/rayo.jpg" width="600" /></center>
       <p>
         Mate: Es el mejor amigo de Rayo, es una grúa oxidada pero muy graciosa,
         le enseña a rayo a como conducir marcha atrás lo cual ayudó mucho a Rayo
         en la carrera final.
       </p>
-      <center><img src="../img/mate.jpg" width="600" /></center>
+      <center><img src="img/mate.jpg" width="600" /></center>
       <p>
         Sally: Es la dueña del motel donde pasaba Rayo las noches en su estancia
         en Radiador Springs, acabó enamorándose de Rayo, igual que él de ella.
       </p>
-      <center><img src="../img/sally.jpg" width="600" /></center>
+      <center><img src="img/sally.jpg" width="600" /></center>
       <p>
         Doc Hudson: Leyenda de la copa pistón que tras un gran accidente dejó su
         carrera, esto le afectó tanto que se fue a Radiador Springs y no volvió
         a competir.
       </p>
-      <center><img src="../img/doc.jpg" width="600" /></center>
+      <center><img src="img/doc.jpg" width="600" /></center>
       <p>
         El Rey: Es el corredor estrella de la gran scudería Dinoco, sufre un
         gran accidente en la ultima carrera y Rayo le ayuda a terminarla.
       </p>
-      <center><img src="../img/elrey.jpg" width="600" /></center>
+      <center><img src="img/elrey.jpg" width="600" /></center>
     </div>
 
     <div class="director">
@@ -76,7 +76,7 @@
         California.
       </p>
 
-      <center><img src="../img/director.jpg" /></center>
+      <center><img src="img/director.jpg" /></center>
     </div>
     <div class="container">
       <div class="dondeVer">
@@ -181,12 +181,12 @@
     </center>
 
     <div class="container2">
-      <img src="../img/foto1.jpg"  />
-      <img src="../img/foto2.jpg"  />
-      <img src="../img/foto3.jpg"  />
-      <img src="../img/foto4.jpg"  />
-      <img src="../img/foto5.jpg"  />
-      <img src="../img/foto6.jpg"  />
+      <img src="img/foto1.jpg"  />
+      <img src="img/foto2.jpg"  />
+      <img src="img/foto3.jpg"  />
+      <img src="img/foto4.jpg"  />
+      <img src="img/foto5.jpg"  />
+      <img src="img/foto6.jpg"  />
     </div>
   </body>
 </html>
