--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/StylesMainPage.css">
 </head>
 <body>
-    <h1><a href="/html/page.html">CARS</a></h1>
+    <h1><a href="page.html">CARS</a></h1>
     <p>CLICK HERE TO SEE MORE</p>
     <img src="/img/arrow.png" > 
 </body>
