--- a/page.html
+++ b/page.html
@@ -11,8 +11,9 @@
   <body>
     <div class="tittle">
       <h1>RESUMEN DE LA PELÍCULA</h1>
-      <div class="logo"><img src="img/logo.png" /></div>
-    </div>
+      <div class="logo">
+        <img src="img/logo.png" /></div>
+      </div>
     <div class="txt">
       <p>
         Rayo McQueen es una prometedora figura del automovilismo, que está a
@@ -181,12 +182,39 @@
     </center>
 
     <div class="container2">
-      <img src="img/foto1.jpg"  />
-      <img src="img/foto2.jpg"  />
-      <img src="img/foto3.jpg"  />
-      <img src="img/foto4.jpg"  />
-      <img src="img/foto5.jpg"  />
-      <img src="img/foto6.jpg"  />
+      <img src="img/foto1.jpg" />
+      <img src="img/foto2.jpg" />
+      <img src="img/foto3.jpg" />
+      <img src="img/foto4.jpg" />
+      <img src="img/foto5.jpg" />
+      <img src="img/foto6.jpg" />
     </div>
+
+    
+      <h1>Formulario de opinión</h1>
+      <form>
+        <p>Seleccione su calificación:</p>
+        <input type="range" min="1" max="5" />
+
+        <p>Deja tu opinión:</p>
+        <textarea rows="4" cols="50"></textarea>
+
+        <p>¿Recomendarías este producto?</p>
+        <div class="check">
+          <input type="checkbox" name="recommend" value="yes" /> Sí
+          <input type="checkbox" name="recommend" value="no" /> No
+        </div>
+        <p>Información personal</p>
+        <p>Nombre:</p>
+        <input type="text" name="firstname" />
+
+        <p>Apellidos:</p>
+        <input type="text" name="lastname" />
+
+        <p>Email:</p>
+        <input type="email" name="email" />
+
+        <input type="submit" value="Enviar" />
+      </form>
   </body>
 </html>
