--- a/page.html
+++ b/page.html
@@ -12,8 +12,9 @@
     <div class="tittle">
       <h1>RESUMEN DE LA PELÍCULA</h1>
       <div class="logo">
-        <img src="img/logo.png" /></div>
+        <img src="img/logo.png" />
       </div>
+    </div>
     <div class="txt">
       <p>
         Rayo McQueen es una prometedora figura del automovilismo, que está a
@@ -190,31 +191,30 @@
       <img src="img/foto6.jpg" />
     </div>
 
-    
-      <h1>Formulario de opinión</h1>
-      <form>
-        <p>Seleccione su calificación:</p>
-        <input type="range" min="1" max="5" />
+    <h1>Formulario de opinión</h1>
+    <form>
+      <p>Seleccione su calificación:</p>
+      <input type="range" min="1" max="5" />
 
-        <p>Deja tu opinión:</p>
-        <textarea rows="4" cols="50"></textarea>
+      <p>Deja tu opinión:</p>
+      <textarea rows="4" cols="50"></textarea>
 
-        <p>¿Recomendarías este producto?</p>
-        <div class="check">
-          <input type="checkbox" name="recommend" value="yes" /> Sí
-          <input type="checkbox" name="recommend" value="no" /> No
-        </div>
-        <p>Información personal</p>
-        <p>Nombre:</p>
-        <input type="text" name="firstname" />
+      <p>¿Recomendarías este producto?</p>
+      <div class="check">
+        <input type="checkbox" name="recommend" value="yes" /> Sí
+        <input type="checkbox" name="recommend" value="no" /> No
+      </div>
+      <p>Información personal</p>
+      <p>Nombre:</p>
+      <input type="text" name="firstname" />
 
-        <p>Apellidos:</p>
-        <input type="text" name="lastname" />
+      <p>Apellidos:</p>
+      <input type="text" name="lastname" />
 
-        <p>Email:</p>
-        <input type="email" name="email" />
+      <p>Email:</p>
+      <input type="email" name="email" />
 
-        <input type="submit" value="Enviar" />
-      </form>
+      <input type="submit" value="Enviar" />
+    </form>
   </body>
 </html>
