--- a/VERSION 1/index.html
+++ b/VERSION 1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARS LA PELICULA</title>
-    <link rel="stylesheet" href="/css/StylesMainPage.css">
+    <link rel="stylesheet" href="StylesMainPage.css">
 </head>
 <body>
     <h1><a href="page.html">CARS</a></h1>
