--- a/VERSION 2/site/about-us.html
+++ b/VERSION 2/site/about-us.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="/IMG/logo.png" type="image/x-icon">
+    <link rel="icon" href="../IMG/logo.png" type="image/x-icon">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald:200,400%7CLato:300,400,300italic,700%7CMontserrat:900">
@@ -84,7 +84,7 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default" src="images/logo-default-208x46.png" alt="" width="208" height="46"/><img class="logo-inverse" src="/IMG/logo.png" alt="" width="208" height="46"/></a></div>
+                <div class="rd-navbar-brand"><a class="brand-name" href="index.html"><img class="logo-default" src="images/logo-default-208x46.png" alt="" width="208" height="46"/><img class="logo-inverse" src="../IMG/logo.png" alt="" width="208" height="46"/></a></div>
               </div>
               <div class="rd-navbar-aside-right">
                 <div class="rd-navbar-nav-wrap">
@@ -117,7 +117,7 @@
           <div class="row row-50 row-xxl-90 justify-content-sm-center offset-custom-2">
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/rayo.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/rayo.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">RAYO</a></h5>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/sally.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/sally.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">SALLY</a></h5>
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/doc.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/doc.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">DOC HUDSON</a></h5>
@@ -150,7 +150,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/mate.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/mate.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">MATE</a></h5>
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/luigui.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/luigui.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">LUIGI </a></h5>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/elrey.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/elrey.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">EL REY</a></h5>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/CHICK.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/CHICK.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">CHICK HIGGS</a></h5>
@@ -194,7 +194,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
               <div class="team-classic team-classic-circle">
-                <figure><img class="rounded-circle" src="/IMG/Guido.jpg" alt="" width="300" height="300"/>
+                <figure><img class="rounded-circle" src="../IMG/Guido.jpg" alt="" width="300" height="300"/>
                 </figure>
                 <div class="team-classic-caption">
                   <h5><a class="team-classic-title" href="#">GUIDO</a></h5>
